fixes code word-break on non-chrome

--- a/_sass/resources.scss
+++ b/_sass/resources.scss
@@ -228,3 +228,7 @@ section.resources-section {
 table#signing-file-elements tr td code {
 	word-break: normal;
 }
+
+p > code {
+	word-break: normal;
+}
